[package]
name = "skyblock-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Runtime
tokio = { version = "1", features = ["full"] }

# Https
reqwest = { version = "0.11", features = ["json"] }

# Serde
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"

# Polars
polars = { version = "0.37.0", features = ["lazy", "temporal", "describe", "json", "parquet", "dtype-datetime"] }
postgrest = "1.6.0"
dotenvy = "0.15.7"
